# ecomarine-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  openapi.json  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: manual-deploy.yml  update-rapidapi-specs.yml  validate-api.yml
.opencode/plans/: RAPIDAPI_LAUNCH_PLAN.md  STANDARDIZED_LAUNCH_PLAN.md
.rapidapi/tests/: curl_commands.json  summary.json  test_cases.md  test_suite.json
data/: merged_eca.dbf  merged_eca.shx
demo/: index.html  route-calculator.html  supported-zones.html  zone-checker.html
demo/css/: styles.css
demo/js/: app.js
docs/: CI_CD_SETUP.md
docs/legal/: terms_of_service.md
docs/rapidapi/: long_description.md  short_description.txt  tags_keywords.txt
ecomarine/: __init__.py  searoute.py  utils.py
ecomarine/classes/: __init__.py  area_feature.py  kdtree.py  marnet.py  passages.py  ports.py
ecomarine/data/: __init__.py  marnet_dict_eca_distance_with_remove_60_north.py  ports_dict.py  refined_marnet_data.py  refined_marnet_data_no_high_north.py  refined_marnet_data_no_high_north_no_eca.py  zones.py
ecomarine/tests/: test_area_feature.py  test_mandatory_passages.py  test_ports.py  test_searoute.py  test_utils.py
scripts/: extract_tests_for_rapidapi.py  generate_openapi.sh  setup-rapidapi-secrets.sh  test-openapi-local.sh
tests/integration/: test_api_integration.py
